[gd_scene load_steps=20 format=2]

[ext_resource path="res://characters.png" type="Texture" id=1]
[ext_resource path="res://DialogUI.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ResponseLabel.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 7
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=14]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 34
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=18]
size = 9
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
size = 58
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=20]
size = 44
font_data = ExtResource( 4 )

[node name="DialogueCombat" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Enemy" type="KinematicBody2D" parent="."]

[node name="EnemyDialogue" type="MarginContainer" parent="Enemy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 301.0
margin_top = 191.5
margin_right = 723.0
margin_bottom = 448.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Enemy/EnemyDialogue"]
margin_right = 422.0
margin_bottom = 257.0
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="Enemy/EnemyDialogue"]
margin_right = 422.0
margin_bottom = 257.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="Enemy/EnemyDialogue/MarginContainer"]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = 410.0
margin_bottom = 245.0

[node name="HBoxContainer" type="HBoxContainer" parent="Enemy/EnemyDialogue/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 410.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyText" type="RichTextLabel" parent="Enemy/EnemyDialogue/MarginContainer/HBoxContainer"]
margin_right = 395.0
margin_bottom = 233.0
rect_min_size = Vector2( 395, 0 )
custom_fonts/normal_font = SubResource( 12 )
text = "Am I a generic enemy downloaded from a tutorial?"

[node name="Sprite" type="Sprite" parent="Enemy"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy/Sprite"]
position = Vector2( 895, 380 )
scale = Vector2( 6.03125, 6.79688 )
frames = SubResource( 10 )

[node name="ArgueOrProposition" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -144.0
margin_right = -2.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ArgueOrProposition"]
margin_right = 1020.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="ArgueOrProposition/Panel"]
margin_left = 9.0
margin_top = 9.0
margin_right = 1010.0
margin_bottom = 137.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ArgueOrProposition/Panel/MarginContainer"]
visible = false
margin_right = 1002.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="ArgueOrProposition/Panel/MarginContainer"]
margin_right = 1002.0
margin_bottom = 128.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.19

[node name="argueBTN" type="Button" parent="ArgueOrProposition/Panel/MarginContainer/HBoxContainer"]
margin_right = 174.051
margin_bottom = 128.0
rect_min_size = Vector2( 174.051, 0 )
action_mode = 0
text = "ARGUE"

[node name="Control" type="Control" parent="ArgueOrProposition/Panel/MarginContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 766.967
margin_bottom = 128.0
rect_min_size = Vector2( 588.967, 0 )

[node name="propositionBTN" type="Button" parent="ArgueOrProposition/Panel/MarginContainer/HBoxContainer"]
margin_left = 770.0
margin_right = 1002.0
margin_bottom = 128.0
rect_min_size = Vector2( 232, 0 )
text = "Propositions"

[node name="DialogOptionsContainer" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -144.0
margin_right = -4.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DialogOptionsContainer"]
margin_right = 1018.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="DialogOptionsContainer/Panel"]
margin_left = 9.0
margin_top = 9.0
margin_right = 1010.0
margin_bottom = 137.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DialogOptionsContainer/Panel/MarginContainer"]
margin_right = 1001.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="DialogOptionsContainer/Panel/MarginContainer/Panel"]
anchor_left = 0.001
anchor_right = 0.244
anchor_bottom = 0.078
margin_left = 1.039
margin_right = 757.796
margin_bottom = 39.016
rect_min_size = Vector2( 1000, 0 )
rect_scale = Vector2( 1.01616, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yesBTN" type="Button" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer"]
margin_right = 220.0
margin_bottom = 49.0
rect_min_size = Vector2( 220, 49 )

[node name="RichTextLabel" type="RichTextLabel" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer/yesBTN"]
anchor_left = -1.0
margin_left = 218.0
margin_right = 224.0
margin_bottom = 49.0
rect_min_size = Vector2( -2, 6 )
mouse_filter = 1
custom_fonts/normal_font = SubResource( 14 )
text = "Yes
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer"]
margin_left = 224.0
margin_right = 769.0
margin_bottom = 49.0
rect_min_size = Vector2( 545, 0 )

[node name="Button2" type="Button" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer"]
margin_left = 773.0
margin_right = 976.0
margin_bottom = 49.0
rect_min_size = Vector2( 203, 49 )

[node name="RichTextLabel" type="RichTextLabel" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer/Button2"]
margin_right = 203.0
margin_bottom = 48.0
rect_scale = Vector2( 0.994911, 1.01738 )
custom_fonts/mono_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 16 )
text = "Maybe"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="DialogOptionsContainer/Panel/MarginContainer/Panel"]
margin_left = 2.0
margin_top = 78.0
margin_right = 1002.0
margin_bottom = 127.0
rect_min_size = Vector2( 899, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer2"]
margin_right = 225.0
margin_bottom = 50.0
rect_min_size = Vector2( 225, 49 )

[node name="RichTextLabel" type="RichTextLabel" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer2/Button"]
margin_right = 223.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 17 )
text = "NO"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer2"]
margin_left = 229.0
margin_right = 786.0
margin_bottom = 50.0
rect_min_size = Vector2( 557, 45 )

[node name="Button2" type="Button" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer2"]
margin_left = 790.0
margin_right = 996.0
margin_bottom = 50.0
rect_min_size = Vector2( 206, 48 )

[node name="RichTextLabel" type="RichTextLabel" parent="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer2/Button2"]
margin_right = 206.0
margin_bottom = 48.0
custom_fonts/mono_font = SubResource( 18 )
custom_fonts/normal_font = SubResource( 19 )
text = "...."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Response" type="MarginContainer" parent="."]
visible = false
margin_left = 2.0
margin_top = 496.0
margin_right = 1022.0
margin_bottom = 641.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Response"]
margin_right = 1020.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Response/Panel"]
margin_left = 9.0
margin_top = 9.0
margin_right = 1010.0
margin_bottom = 137.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Response/Panel/MarginContainer"]
visible = false
margin_right = 1001.0
margin_bottom = 128.0

[node name="RichTextLabel" type="RichTextLabel" parent="Response/Panel/MarginContainer"]
margin_right = 1001.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 20 )
bbcode_enabled = true
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Response"]
wait_time = 0.057
autostart = true

[node name="Tween" type="Tween" parent="Response"]

[node name="Tween" type="Tween" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="ArgueOrProposition/Panel/MarginContainer/HBoxContainer/argueBTN" to="." method="_on_argueBTN_pressed"]
[connection signal="pressed" from="DialogOptionsContainer/Panel/MarginContainer/Panel/HBoxContainer/yesBTN" to="." method="_on_yesBTN_pressed"]
[connection signal="timeout" from="Response/Timer" to="Response/Panel/MarginContainer/RichTextLabel" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Response/Tween" to="Response" method="_on_Tween_tween_completed"]
